--- a/resources/assets/sass/huisstijl.scss
+++ b/resources/assets/sass/huisstijl.scss
@@ -3,7 +3,7 @@
 
 	- Secties aangeven met een lange gestreepte lijn. Daarin in hoofdletters de title van de sectie aangeven..
 	- volgorde per sectie is: --Base settings--, --classes--, --media queries--.
-	- probeer de single responsibility rule aan te houden. 
+	- probeer de single responsibility rule aan te houden.
 
 {screensize}-{element}-{behaviour}-{usage}-{identifier}-{amount}
 {lg}-{bg}-{hover}-{darken}-{main}-{xs}
@@ -29,10 +29,10 @@
 
 /* ----------------------- */
 /* || --media queries-- || */
-/* ----------------------- */ 
+/* ----------------------- */
 
 
-/* 
+/*
 
 	/* Large desktops and laptops */
 	@media (min-width: 1200px) { }
@@ -51,7 +51,7 @@
 
 /*
 
-	
+
 	INCLUDED IN THIS DOCUMENT:
 	-- color variables
 	-- font variables
@@ -61,7 +61,7 @@
 	-- aesthetic variables
 	-- html stucture variables
 	-- base settings
-	
+
 	HUISSTIJL
 	-------------------------------------
 	-- backgrounds
@@ -93,19 +93,14 @@
 /* --------------------------------------------- COLOR VARIABLES -------------------------------------------- */
 
 
-
-
 $light-color: white;
 $dark-color: #3F3F3F;
-$main-color : #46386F;
-$secondary-color : #F7BB17;
-$accent-color : #EDF4F4;
-
+$main-color : #050505;
+$secondary-color : #FFF506;
+$accent-color : #E9E9E9;
 
 $background-color-light: white;
 $background-color-dark: #3F3F3F;
-
-
 
 /* --------------------------------------------- FONT VARIABLES -------------------------------------------- */
 
@@ -197,8 +192,8 @@ p{
 	font-weight: 300;
 }
 
-h1,h2,h3,h4,h5{ 
-	font-family: $font-heading !important; 
+h1,h2,h3,h4,h5{
+	font-family: $font-heading !important;
 }
 
 
@@ -449,7 +444,7 @@ h1,h2,h3,h4,h5{
 
 
 	/* Large desktops and laptops */
-	@media (min-width: 1200px) { 
+	@media (min-width: 1200px) {
 		.lg-bg-light{ background: $background-color-light; min-height: 1px; }
 		.lg-bg-dark{ background: $background-color-dark; min-height: 1px; }
 		.lg-bg-main{ background: $main-color !important; min-height: 1px; }
@@ -468,7 +463,7 @@ h1,h2,h3,h4,h5{
 	}
 
 	/* Landscape tablets and medium desktops */
-	@media (min-width: 992px) and (max-width: 1199px) { 
+	@media (min-width: 992px) and (max-width: 1199px) {
 		.md-bg-light{ background: $background-color-light; min-height: 1px; }
 		.md-bg-dark{ background: $background-color-dark; min-height: 1px; }
 		.md-bg-main{ background: $main-color !important; min-height: 1px; }
@@ -482,11 +477,11 @@ h1,h2,h3,h4,h5{
 		.md-bg-hover-dark:hover{ background: $background-color-dark !important; }
 		.md-bg-hover-main:hover{ background: $main-color !important; }
 		.md-bg-hover-secondary:hover{ background: $secondary-color !important; }
-		.md-bg-hover-accent:hover{ background: $accent-color !important; }		
+		.md-bg-hover-accent:hover{ background: $accent-color !important; }
 	}
 
 	/* Portrait tablets and small desktops */
-	@media (min-width: 768px) and (max-width: 991px) { 
+	@media (min-width: 768px) and (max-width: 991px) {
 		.sm-bg-light{ background: $background-color-light; min-height: 1px; }
 		.sm-bg-dark{ background: $background-color-dark; min-height: 1px; }
 		.sm-bg-main{ background: $main-color !important; min-height: 1px; }
@@ -518,11 +513,11 @@ h1,h2,h3,h4,h5{
 		.xs-bg-hover-dark:hover{ background: $background-color-dark !important; }
 		.xs-bg-hover-main:hover{ background: $main-color !important; }
 		.xs-bg-hover-secondary:hover{ background: $secondary-color !important; }
-		.xs-bg-hover-accent:hover{ background: $accent-color !important; }		
+		.xs-bg-hover-accent:hover{ background: $accent-color !important; }
 	 }
 
 	/* Portrait phones and smaller */
-	@media (max-width: 480px) { 
+	@media (max-width: 480px) {
 		.xs-bg-light{ background: $background-color-light; min-height: 1px; }
 		.xs-bg-dark{ background: $background-color-dark; min-height: 1px; }
 		.xs-bg-main{ background: $main-color !important; min-height: 1px; }
@@ -827,7 +822,7 @@ h1.text-color-accent, h2.text-color-accent, h3.text-color-accent, h4.text-color-
 
 
 	/* Large desktops and laptops */
-	@media (min-width: 1200px) { 
+	@media (min-width: 1200px) {
 		.lg-text-color-light{ color: $light-color !important; }
 		.lg-text-color-dark{ color: $dark-color !important; }
 		.lg-text-color-main{ color: $main-color !important; }
@@ -846,7 +841,7 @@ h1.text-color-accent, h2.text-color-accent, h3.text-color-accent, h4.text-color-
 	}
 
 	/* Landscape tablets and medium desktops */
-	@media (min-width: 992px) and (max-width: 1199px) { 
+	@media (min-width: 992px) and (max-width: 1199px) {
 		.md-text-color-light{ color: $light-color !important; }
 		.md-text-color-dark{ color: $dark-color !important; }
 		.md-text-color-main{ color: $main-color !important; }
@@ -861,7 +856,7 @@ h1.text-color-accent, h2.text-color-accent, h3.text-color-accent, h4.text-color-
 	}
 
 	/* Portrait tablets and small desktops */
-	@media (min-width: 768px) and (max-width: 991px) { 
+	@media (min-width: 768px) and (max-width: 991px) {
 		.sm-text-color-light{ color: $light-color !important; }
 		.sm-text-color-dark{ color: $dark-color !important; }
 		.sm-text-color-main{ color: $main-color !important; }
@@ -877,7 +872,7 @@ h1.text-color-accent, h2.text-color-accent, h3.text-color-accent, h4.text-color-
 	}
 
 	/* Landscape phones and portrait tablets */
-	@media (max-width: 767px) { 
+	@media (max-width: 767px) {
 		.xs-text-color-light{ color: $light-color !important; }
 		.xs-text-color-dark{ color: $dark-color !important; }
 		.xs-text-color-main{ color: $main-color !important; }
@@ -893,7 +888,7 @@ h1.text-color-accent, h2.text-color-accent, h3.text-color-accent, h4.text-color-
 	}
 
 	/* Portrait phones and smaller */
-	@media (max-width: 480px) { 
+	@media (max-width: 480px) {
 		.xs-text-color-light{ color: $light-color !important; }
 		.xs-text-color-dark{ color: $dark-color !important; }
 		.xs-text-color-main{ color: $main-color !important; }
@@ -1164,7 +1159,7 @@ h3{ font-size: $font-size-md; }
 
 /* ----------------------- */
 /* || --media queries-- || */
-/* ----------------------- */ 
+/* ----------------------- */
 
 
 
@@ -1196,7 +1191,7 @@ h3{ font-size: $font-size-md; }
 
 /* ----------------------- */
 /* || --media queries-- || */
-/* ----------------------- */ 
+/* ----------------------- */
 
 
 
@@ -1240,7 +1235,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 
 /* ----------------------- */
 /* || --media queries-- || */
-/* ----------------------- */ 
+/* ----------------------- */
 
 
 	/* Large desktops and laptops */
@@ -1295,11 +1290,11 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 
 /* ----------------------- */
 /* || --media queries-- || */
-/* ----------------------- */ 
+/* ----------------------- */
 
 
 /* Large desktops and laptops */
-@media (min-width: 1200px) { 
+@media (min-width: 1200px) {
 	.lg-circle-xl { width: $circle-dist-xl; height: $circle-dist-xl; line-height: $circle-dist-xl ; }
 	.lg-circle-lg { width: $circle-dist-lg; height: $circle-dist-lg; line-height: $circle-dist-lg ; }
 	.lg-circle-md { width: $circle-dist-md; height: $circle-dist-md; line-height: $circle-dist-md ; }
@@ -1308,7 +1303,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 }
 
 /* Landscape tablets and medium desktops */
-@media (min-width: 992px) and (max-width: 1199px) { 
+@media (min-width: 992px) and (max-width: 1199px) {
 	.md-circle-xl { width: $circle-dist-xl; height: $circle-dist-xl; line-height: $circle-dist-xl ; }
 	.md-circle-lg { width: $circle-dist-lg; height: $circle-dist-lg; line-height: $circle-dist-lg ; }
 	.md-circle-md { width: $circle-dist-md; height: $circle-dist-md; line-height: $circle-dist-md ; }
@@ -1317,7 +1312,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 }
 
 /* Portrait tablets and small desktops */
-@media (min-width: 768px) and (max-width: 991px) { 
+@media (min-width: 768px) and (max-width: 991px) {
 	.sm-circle-xl { width: $circle-dist-xl; height: $circle-dist-xl; line-height: $circle-dist-xl ; }
 	.sm-circle-lg { width: $circle-dist-lg; height: $circle-dist-lg; line-height: $circle-dist-lg ; }
 	.sm-circle-md { width: $circle-dist-md; height: $circle-dist-md; line-height: $circle-dist-md ; }
@@ -1326,7 +1321,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 }
 
 /* Landscape phones and portrait tablets */
-@media (max-width: 767px) { 
+@media (max-width: 767px) {
 	.xs-circle-xl { width: $circle-dist-xl; height: $circle-dist-xl; line-height: $circle-dist-xl ; }
 	.xs-circle-lg { width: $circle-dist-lg; height: $circle-dist-lg; line-height: $circle-dist-lg ; }
 	.xs-circle-md { width: $circle-dist-md; height: $circle-dist-md; line-height: $circle-dist-md ; }
@@ -1335,7 +1330,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 }
 
 /* Portrait phones and smaller */
-@media (max-width: 480px) { 
+@media (max-width: 480px) {
 	.xs-circle-xl { width: $circle-dist-xl; height: $circle-dist-xl; line-height: $circle-dist-xl ; }
 	.xs-circle-lg { width: $circle-dist-lg; height: $circle-dist-lg; line-height: $circle-dist-lg ; }
 	.xs-circle-md { width: $circle-dist-md; height: $circle-dist-md; line-height: $circle-dist-md ; }
@@ -1379,14 +1374,14 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 
 /* ----------------------- */
 /* || --media queries-- || */
-/* ----------------------- */ 
+/* ----------------------- */
 
 
 
 
 /* Large desktops and laptops */
-@media (min-width: 1200px) { 
-	
+@media (min-width: 1200px) {
+
 	.lg-float-left{ float: left; }
 	.lg-float-right{ float: right; }
 
@@ -1398,7 +1393,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 }
 
 /* Landscape tablets and medium desktops */
-@media (min-width: 992px) and (max-width: 1199px) { 
+@media (min-width: 992px) and (max-width: 1199px) {
 
 	.md-float-left{ float: left; }
 	.md-float-right{ float: right; }
@@ -1410,7 +1405,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 }
 
 /* Portrait tablets and small desktops */
-@media (min-width: 768px) and (max-width: 991px) { 
+@media (min-width: 768px) and (max-width: 991px) {
 
 	.sm-float-left{ float: left; }
 	.sm-float-right{ float: right; }
@@ -1422,8 +1417,8 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 }
 
 /* Landscape phones and portrait tablets */
-@media (max-width: 767px) { 
-	
+@media (max-width: 767px) {
+
 	.xs-float-left{ float: left; }
 	.xs-float-right{ float: right; }
 
@@ -1434,7 +1429,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 }
 
 /* Portrait phones and smaller */
-@media (max-width: 480px) { 
+@media (max-width: 480px) {
 
 	.xs-float-left{ float: left; }
 	.xs-float-right{ float: right; }
@@ -1492,12 +1487,12 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 
 /* ----------------------- */
 /* || --media queries-- || */
-/* ----------------------- */ 
+/* ----------------------- */
 
 
 
 /* Large desktops and laptops */
-@media (min-width: 1200px) { 
+@media (min-width: 1200px) {
 	.lg-max-width-xs { max-width: $limit-width-xs; }
 	.lg-max-width-sm { max-width: $limit-width-sm; }
 	.lg-max-width-md { max-width: $limit-width-md; }
@@ -1527,7 +1522,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 }
 
 /* Landscape tablets and medium desktops */
-@media (min-width: 992px) and (max-width: 1199px) { 
+@media (min-width: 992px) and (max-width: 1199px) {
 	.md-max-width-xs { max-width: 200px; }
 	.md-max-width-sm { max-width: 250px; }
 	.md-max-width-md { max-width: 300px; }
@@ -1550,7 +1545,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 	.md-min-height-sm { min-height: $limit-height-sm; }
 	.md-min-height-md { min-height: $limit-height-md; }
 	.md-min-height-lg { min-height: $limit-height-lg; }
-	.md-min-height-xl { min-height: $limit-height-xl; }	
+	.md-min-height-xl { min-height: $limit-height-xl; }
 
 	.md-max-height-none { max-height: none; }
 	.md-min-height-none { max-height: none; }
@@ -1560,7 +1555,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 }
 
 /* Portrait tablets and small desktops */
-@media (min-width: 768px) and (max-width: 991px) { 
+@media (min-width: 768px) and (max-width: 991px) {
 	.sm-max-width-xs { max-width: 200px; }
 	.sm-max-width-sm { max-width: 250px; }
 	.sm-max-width-md { max-width: 300px; }
@@ -1591,7 +1586,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 }
 
 /* Landscape phones and portrait tablets */
-@media (max-width: 767px) { 
+@media (max-width: 767px) {
 	.xs-max-width-xs { max-width: 200px; }
 	.xs-max-width-sm { max-width: 250px; }
 	.xs-max-width-md { max-width: 300px; }
@@ -1622,7 +1617,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 }
 
 /* Portrait phones and smaller */
-@media (max-width: 480px) { 
+@media (max-width: 480px) {
 	.xs-max-width-xs { max-width: 200px; }
 	.xs-max-width-sm { max-width: 250px; }
 	.xs-max-width-md { max-width: 300px; }
@@ -1686,13 +1681,13 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 
 /* ----------------------- */
 /* || --media queries-- || */
-/* ----------------------- */ 
+/* ----------------------- */
 
 
 
 
 /* Large desktops and laptops */
-@media (min-width: 1200px) { 
+@media (min-width: 1200px) {
 
 	.lg-block{ display: block; }
 	.lg-inline-block{ display: inline-block; }
@@ -1701,7 +1696,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 }
 
 /* Landscape tablets and medium desktops */
-@media (min-width: 992px) and (max-width: 1199px) { 
+@media (min-width: 992px) and (max-width: 1199px) {
 
 	.md-block{ display: block; }
 	.md-inline-block{ display: inline-block; }
@@ -1710,7 +1705,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 }
 
 /* Portrait tablets and small desktops */
-@media (min-width: 768px) and (max-width: 991px) { 
+@media (min-width: 768px) and (max-width: 991px) {
 
 	.sm-block{ display: block; }
 	.sm-inline-block{ display: inline-block; }
@@ -1719,7 +1714,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 }
 
 /* Landscape phones and portrait tablets */
-@media (max-width: 767px) { 
+@media (max-width: 767px) {
 
 	.xs-block{ display: block; }
 	.xs-inline-block{ display: inline-block; }
@@ -1728,7 +1723,7 @@ img .image-greyscale-none{ -webkit-filter: greyscale(0%); filter: grayscale(0%);
 }
 
 /* Portrait phones and smaller */
-@media (max-width: 480px) { 
+@media (max-width: 480px) {
 
 	.xs-block{ display: block; }
 	.xs-inline-block{ display: inline-block; }
