--- a/resources/assets/sass/navbar.scss
+++ b/resources/assets/sass/navbar.scss
@@ -6,43 +6,38 @@
 }
 
 .navbar-default .navbar-nav > .active > a{
-    background-color: $light-color !important;
-
+    background-color: $secondary-color !important;
 }
 
 
-
-
-
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
-    
-    background-color: $dark-color;
+
 }
 
 .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
 
-    background-color: $light-color;
+
 }
 
 .navbar-default .navbar-nav > li > a, .navbar-default .navbar-nav > li {
-    
+
     margin: 0 !important;
 }
 
 .navbar-default .navbar-nav > li > a, .navbar-default .navbar-nav > li > a {
-    
+
     background-color: $light-color;
 
     margin: 0px;
     padding: 20px;
     margin-right: $dist-md;
-   
-        
+
+
 
 }
 
 
 .navbar{
 	position:relative;
-	
+
 }
