Update voor de website van prjct-amsterdam

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,4 +1,7 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "node_modules/owl-carousel-2/assets/owl.carousel.min";
+@import "node_modules/owl-carousel-2/assets/owl.theme.default.min";
+
 
 @import "reset";
 @import "common_used_classes";
@@ -6,3 +9,4 @@
 @import "base-rules";
 @import "master";
 @import "navbar";
+@import "material";
