--- a/resources/assets/sass/base-rules.scss
+++ b/resources/assets/sass/base-rules.scss
@@ -14,8 +14,8 @@ $dist-side : 85px;
 
 /* padding wrapper classes */
 
-	
-/* all screens */	
+
+/* all screens */
 
 .reset-padding{
 	padding: 0px;
@@ -60,7 +60,7 @@ $dist-side : 85px;
 .space-inside-down-xs{ padding-bottom: $dist-xs;}
 .space-inside-up-xs{ padding-top: $dist-xs;}
 .space-inside-left-xs{ padding-left: $dist-xs; }
-.space-inside-right-xs{ padding-right: $dist-xs; }	
+.space-inside-right-xs{ padding-right: $dist-xs; }
 
 
 
@@ -68,7 +68,7 @@ $dist-side : 85px;
 
 /* Large desktops and laptops */
 @media (min-width: 1200px) {
-	
+
 
 	/* resets */
 
@@ -106,7 +106,7 @@ $dist-side : 85px;
 	.lg-space-inside-up-xs-none{ padding-top: 0;  }
 	.lg-space-inside-left-xs-none{ padding-left: 0; }
 	.lg-space-inside-right-xs-none{ padding-right: 0;  }
-	
+
 	.lg-padding-xl{ padding: $dist-xl; }
 	.lg-padding-lg{ padding: $dist-lg; }
 	.lg-padding-md{ padding: $dist-md; }
@@ -146,7 +146,7 @@ $dist-side : 85px;
 	.lg-space-inside-down-xs{ padding-bottom: $dist-xs;}
 	.lg-space-inside-up-xs{ padding-top: $dist-xs;}
 	.lg-space-inside-left-xs{ padding-left: $dist-xs; }
-	.lg-space-inside-right-xs{ padding-right: $dist-xs; }	
+	.lg-space-inside-right-xs{ padding-right: $dist-xs; }
 
 
 }
@@ -156,7 +156,7 @@ $dist-side : 85px;
 @media (min-width: 992px) and (max-width: 1199px) {
 
 	/* resets */
-	
+
 	.md-space-inside-xl-none{ padding-top: 0; padding-bottom: 0; }
 	.md-space-inside-sides-xl-none{ padding-left: 0; padding-right: 0; }
 	.md-space-inside-down-xl-none{  padding-bottom: 0; }
@@ -231,20 +231,20 @@ $dist-side : 85px;
 	.md-space-inside-down-xs{ padding-bottom: $dist-xs;}
 	.md-space-inside-up-xs{ padding-top: $dist-xs;}
 	.md-space-inside-left-xs{ padding-left: $dist-xs; }
-	.md-space-inside-right-xs{ padding-right: $dist-xs; }	
+	.md-space-inside-right-xs{ padding-right: $dist-xs; }
 
 
 }
 
 /* Portrait tablets and small desktops */
 @media (min-width: 768px) and (max-width: 991px) {
-	
+
 	.xs-reset-padding{
 		padding: 0px;
 	}
 
 	/* resets */
-	
+
 	.xs-space-inside-xl-none{ padding-top: 0; padding-bottom: 0; }
 	.xs-space-inside-sides-xl-none{ padding-left: 0; padding-right: 0; }
 	.xs-space-inside-down-xl-none{  padding-bottom: 0; }
@@ -330,7 +330,7 @@ $dist-side : 85px;
 @media (max-width: 767px) {
 
 	/* resets */
-	
+
 	.xs-space-inside-xl-none{ padding-top: 0; padding-bottom: 0; }
 	.xs-space-inside-sides-xl-none{ padding-left: 0; padding-right: 0; }
 	.xs-space-inside-down-xl-none{  padding-bottom: 0; }
@@ -405,7 +405,7 @@ $dist-side : 85px;
 	.xs-space-inside-down-xs{ padding-bottom: $dist-xs;}
 	.xs-space-inside-up-xs{ padding-top: $dist-xs;}
 	.xs-space-inside-left-xs{ padding-left: $dist-xs; }
-	.xs-space-inside-right-xs{ padding-right: $dist-xs; }	
+	.xs-space-inside-right-xs{ padding-right: $dist-xs; }
 
 }
 
@@ -414,7 +414,7 @@ $dist-side : 85px;
 
 
 	/* resets */
-	
+
 	.-space-inside-xl-none{ padding-top: 0; padding-bottom: 0; }
 	.-space-inside-sides-xl-none{ padding-left: 0; padding-right: 0; }
 	.-space-inside-down-xl-none{  padding-bottom: 0; }
@@ -448,7 +448,7 @@ $dist-side : 85px;
 	.-space-inside-down-xs-none{  padding-bottom: 0; }
 	.-space-inside-up-xs-none{ padding-top: 0;  }
 	.-space-inside-left-xs-none{ padding-left: 0; }
-	.-space-inside-right-xs-none{ padding-right: 0;  }	
+	.-space-inside-right-xs-none{ padding-right: 0;  }
 
 
 	.-padding-xl{ padding: $dist-xl; }
@@ -490,9 +490,9 @@ $dist-side : 85px;
 	.-space-inside-down-xs{ padding-bottom: $dist-xs;}
 	.-space-inside-up-xs{ padding-top: $dist-xs;}
 	.-space-inside-left-xs{ padding-left: $dist-xs; }
-	.-space-inside-right-xs{ padding-right: $dist-xs; }	
+	.-space-inside-right-xs{ padding-right: $dist-xs; }
 
-	
+
 }
 
 
@@ -541,13 +541,13 @@ $dist-side : 85px;
 	.space-outside-down-xs{ margin-bottom: $dist-xs;}
 	.space-outside-up-xs{ margin-top: $dist-xs;}
 	.space-outside-left-xs{ margin-left: $dist-xs; }
-	.space-outside-right-xs{ margin-right: $dist-xs; }	
+	.space-outside-right-xs{ margin-right: $dist-xs; }
 
 
 
 /* Large desktops and laptops */
 @media (min-width: 1200px) {
-	
+
 	/* resets */
 
 	.lg-space-outside-xl-none{ margin-top: 0; margin-bottom: 0; }
@@ -625,7 +625,7 @@ $dist-side : 85px;
 	.lg-space-outside-down-xs{ margin-bottom: $dist-xs;}
 	.lg-space-outside-up-xs{ margin-top: $dist-xs;}
 	.lg-space-outside-left-xs{ margin-left: $dist-xs; }
-	.lg-space-outside-right-xs{ margin-right: $dist-xs; }	
+	.lg-space-outside-right-xs{ margin-right: $dist-xs; }
 
 
 }
@@ -709,7 +709,7 @@ $dist-side : 85px;
 	.md-space-outside-down-xs{ margin-bottom: $dist-xs;}
 	.md-space-outside-up-xs{ margin-top: $dist-xs;}
 	.md-space-outside-left-xs{ margin-left: $dist-xs; }
-	.md-space-outside-right-xs{ margin-right: $dist-xs; }	
+	.md-space-outside-right-xs{ margin-right: $dist-xs; }
 
 
 }
@@ -793,7 +793,7 @@ $dist-side : 85px;
 	.sm-space-outside-down-xs{ margin-bottom: $dist-xs;}
 	.sm-space-outside-up-xs{ margin-top: $dist-xs;}
 	.sm-space-outside-left-xs{ margin-left: $dist-xs; }
-	.sm-space-outside-right-xs{ margin-right: $dist-xs; }	
+	.sm-space-outside-right-xs{ margin-right: $dist-xs; }
 
 }
 
@@ -876,7 +876,7 @@ $dist-side : 85px;
 	.xs-space-outside-down-xs{ margin-bottom: $dist-xs;}
 	.xs-space-outside-up-xs{ margin-top: $dist-xs;}
 	.xs-space-outside-left-xs{ margin-left: $dist-xs; }
-	.xs-space-outside-right-xs{ margin-right: $dist-xs; }	
+	.xs-space-outside-right-xs{ margin-right: $dist-xs; }
 
 }
 
@@ -959,7 +959,7 @@ $dist-side : 85px;
 	.xs-space-outside-down-xs{ margin-bottom: $dist-xs;}
 	.xs-space-outside-up-xs{ margin-top: $dist-xs;}
 	.xs-space-outside-left-xs{ margin-left: $dist-xs; }
-	.xs-space-outside-right-xs{ margin-right: $dist-xs; }	
+	.xs-space-outside-right-xs{ margin-right: $dist-xs; }
 }
 
 
@@ -992,7 +992,7 @@ $dist-side : 85px;
 
 /* Large desktops and laptops */
 @media (min-width: 1200px) {
-	
+
 
 	.lg-row-centered {
 	    text-align: center;
@@ -1085,13 +1085,13 @@ $dist-side : 85px;
 
 }
 
-	
+
 
 
 
 /* Large desktops and laptops */
 @media (min-width: 1200px) {
-	
+
 	.lg-text-center{
 		text-align: center;
 	}
@@ -1215,6 +1215,72 @@ a{
 	height: auto;
 }
 
+	/* Large desktops and laptops */
+	@media (min-width: 1200px) {
+			.lg-width-auto{
+				height: 100%;
+				width: auto;
+			}
+
+		.lg-height-auto{
+			width: 100%;
+			height: auto;
+		}
+	}
+
+	/* Landscape tablets and medium desktops */
+	@media (min-width: 992px) and (max-width: 1199px) {
+			.md-width-auto{
+				height: 100%;
+				width: auto;
+			}
+
+		.md-height-auto{
+			width: 100%;
+			height: auto;
+		}
+	}
+
+	/* Portrait tablets and small desktops */
+	@media (min-width: 768px) and (max-width: 991px) {
+			.sm-width-auto{
+				height: 100%;
+				width: auto;
+			}
+
+		.sm-height-auto{
+			width: 100%;
+			height: auto;
+		}
+	}
+
+	/* Landscape phones and portrait tablets */
+	@media (max-width: 767px) {
+			.xs-width-auto{
+				height: 100%;
+				width: auto;
+			}
+
+		.xs-height-auto{
+			width: 100%;
+			height: auto;
+		}
+	 }
+
+	/* Portrait phones and smaller */
+	@media (max-width: 480px) {
+			.xs-width-auto{
+				height: 100%;
+				width: auto;
+			}
+
+		.xs-height-auto{
+			width: 100%;
+			height: auto;
+		}
+	 }
+
+
 
 /* shapes Afmetingen voor cirkels, rechthoeken etc */
 
@@ -1263,7 +1329,7 @@ a{
 
 /* Large desktops and laptops */
 @media (min-width: 1200px) {
-	
+
 
 
 
