--- a/resources/assets/sass/common_used_classes.scss
+++ b/resources/assets/sass/common_used_classes.scss
@@ -2,7 +2,7 @@
 
 .divider{
 	width: 100%;
-	height: 1px; 
+	height: 1px;
 	clear: both;
 }
 
@@ -20,12 +20,12 @@
 
 .input{
 	border: none;
-	
+
 }
 
 
-@media (max-width: 768px) { 
-	
+@media (max-width: 768px) {
+
 	.input{
 		width: 100% !important;
 	}
@@ -36,8 +36,8 @@
 
 }
 
-@media (min-width: 768px) and (max-width: 970px) { 
-	
+@media (min-width: 768px) and (max-width: 970px) {
+
 	.input{
 		width: 100% !important;
 	}
@@ -60,12 +60,12 @@
 
 
 .textarea{
-		
-	resize: none;	
+
+	resize: none;
 	border-style: solid;
 	border-width: 1px;
 	padding: 5px;
-	padding-left: 0px;	
+	padding-left: 0px;
 
 }
 
@@ -81,7 +81,7 @@
 	z-index: 10;
 }
 
-	
+
 
 
 
@@ -96,12 +96,12 @@
 }
 
 .rect-md{
-	
+
 }
 
 .rect-lg{
 	width: 225px;
-	height: 225px;	
+	height: 225px;
 }
 
 .rect-xl{
@@ -144,23 +144,15 @@
 }
 
 
-
-
-
-.banner{
-	
-	padding-top: 80px;
+.banner {
 	overflow: hidden;
-	height: 440px;
 	position: relative;
-	
+
 	.overlay-banner{
 		position: absolute;
 		background: rgba(0,0,0,0.25);
 		top: 0;
 		left: 0;
-		width: 100%;
-		height: 440px;
 		z-index: -9;
 		background: -moz-linear-gradient(left,  rgba(237,244,244,0) 0%, rgba(237,244,244,0.2) 26%, rgba(237,244,244,0.86) 40%, rgba(237,244,244,1) 46%, rgba(237,244,244,1) 49%, rgba(237,244,244,1) 100%); /* FF3.6-15 */
 		background: -webkit-linear-gradient(left,  rgba(237,244,244,0) 0%,rgba(237,244,244,0.2) 26%,rgba(237,244,244,0.86) 40%,rgba(237,244,244,1) 46%,rgba(237,244,244,1) 49%,rgba(237,244,244,1) 100%); /* Chrome10-25,Safari5.1-6 */
@@ -169,13 +161,10 @@
 	}
 
 	img{
-
 		position: absolute;
 		top: 0px;
 		left: 0px;
-		height: 100%;
 		z-index: -10;
-
 	}
 	.underlay{
 		position: absolute;
@@ -185,5 +174,41 @@
 		height: 500px;
 		z-index: -10;
 	}
-
 }
+
+	/* Large desktops and laptops */
+	@media (min-width: 1200px) {
+
+		.banner {
+			height: 710px ;
+		}
+
+	 }
+
+	/* Landscape tablets and medium desktops */
+	@media (min-width: 992px) and (max-width: 1199px) {
+		.banner {
+			height: 580px;
+		}
+	 }
+
+	/* Portrait tablets and small desktops */
+	@media (min-width: 768px) and (max-width: 991px) {
+		.banner {
+			height: 440px;
+		}
+	}
+
+	/* Landscape phones and portrait tablets */
+	@media (max-width: 767px) {
+		.banner{
+			height: 240px;
+		}
+	}
+
+	/* Portrait phones and smaller */
+	@media (max-width: 480px) {
+	.banner {
+			height: 240px;
+		}
+	 }
