--- a/resources/assets/sass/navbar.scss
+++ b/resources/assets/sass/navbar.scss
@@ -11,12 +11,13 @@
 
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
-
+    @extend .transition-normal;
+    background-color: $secondary-color !important;
 }
 
 .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
-
-
+    @extend .transition-normal;
+    background-color: $accent-color;
 }
 
 .navbar-default .navbar-nav > li > a, .navbar-default .navbar-nav > li {
@@ -25,11 +26,11 @@
 }
 
 .navbar-default .navbar-nav > li > a, .navbar-default .navbar-nav > li > a {
-
-    background-color: $light-color;
+    @extend .transition-normal;
+    background-color: $main-color;
 
     margin: 0px;
-    padding: 20px;
+    padding: 15px;
     margin-right: $dist-md;
 
 
