--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,7 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "node_modules/owl-carousel-2/assets/owl.carousel.min";
 @import "node_modules/owl-carousel-2/assets/owl.theme.default.min";
+@import url("http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css");
 
 
 @import "reset";
