--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,6 +2,7 @@
 @import "node_modules/owl-carousel-2/assets/owl.carousel.min";
 @import "node_modules/owl-carousel-2/assets/owl.theme.default.min";
 @import url("http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css");
 
 
 @import "reset";
